modules/02-traffic-management/traffic-mirroring-v2/catalogdetail-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: catalogdetail
  namespace: workshop
spec:
  hosts:
  - catalogdetail
  http:
  - route:
    - destination:
        host: catalogdetail
        port:
          number: 3000
        subset: v1
      weight: 100
    mirror:
      host: catalogdetail
      port:
        number: 3000
      subset: v2
    mirrorPercentage:
      value: 50
